# he-scheduling

./: .gitignore  docker-compose.yml  pyproject.toml  pytest.ini  setup.py  tox.ini
docker/: Dockerfile
he_scheduling/api/v2/: master_planning.py
he_scheduling/core/: config.py
he_scheduling/models/: master_planning.py
he_scheduling/services/: master_planning.py  single_resource_scheduler.py  single_resource_scheduler.pyx
he_scheduling/tasks/: master_planning.py
tests/api/v1/: master_planning.py  test_master_planning_v1.py
tests/api/v2/: test_integration_master_planning.py  test_master_planning_v2.py
tests/services/: test_end_date_hinting.py  test_latest_date.py  test_master_planning.py  test_overload_allowed.py  test_single_resource_scheduler.py  test_variable_capacity.py
